1221 메뉴 리스트 천천히 보여지는 효과 이미지 선택 시 파일 선택

--- a/rland/src/main/resources/static/menu/detail.html
+++ b/rland/src/main/resources/static/menu/detail.html
@@ -10,6 +10,8 @@
 		<link href="../css/layout.css" type="text/css" rel="stylesheet" >
 		<link href="../css/header.css" type="text/css" rel="stylesheet" >
 		<link href="../css/footer.css" type="text/css" rel="stylesheet" >
+		<link href="../css/component/menu-detail.css" type="text/css" rel="stylesheet" >
+		<link href="../css/component/nutrition-info.css" type="text/css" rel="stylesheet" >
 		<link href="../css/component.css" type="text/css" rel="stylesheet" >
 		<link href="../css/buttons.css" type="text/css" rel="stylesheet" >
 		<link href="../css/icon.css" type="text/css" rel="stylesheet" >
@@ -60,21 +62,17 @@
 						</p>
 					</article>
 
-					<div>
-						<a href="" class="btn btn-cancel">담기</a>
-						<a href=""  class="btn btn-default">주문하기</a>
-					</div>
+					<div class="tab-div">
+						<a href="" class="btn btn-fill border-bottom-0 btn-size-1">Default 크기</a>
+						<a href="" class="btn btn-line border-bottom-0 border-left-0 btn-size-1">Large 크기</a>
+					</div>	
 
 					<section class="nutrition-info">
 						<header>
 							<div class="common-p">
 								<h1 class="text-normal">영양정보</h1>
 								<div class="">총량 300ml</div>
-							</div>
-							<div class="tab-div">
-								<a href="" class="btn-toggle-tab">Default 크기</a>
-								<a href="" class="btn-toggle-tab not-selected">Large 크기</a>
-							</div>
+							</div>							
 						</header>
 						<ul class="common-p">
 							<li>
@@ -100,6 +98,11 @@
 						</ul>
 					</section>
 
+				</div>
+
+				<div>
+					<a href="" class="btn btn-cancel btn-cancel-lg btn-size-1 btn-size-2-lg">담기</a>
+					<a href=""  class="btn btn-default btn-default-lg btn-size-1 btn-size-2-lg">주문하기</a>
 				</div>
 
 				<section class="menu-rcmd">
