--- a/rland/src/main/resources/static/index.html
+++ b/rland/src/main/resources/static/index.html
@@ -23,10 +23,10 @@
 <body>    
     <header class="header fixed-header">
         <div>
-            <h1 class="header-title"><a href="/index"><img class="logo" src="../image/logo-w.png" alt="알랜드"></a></h1>
+            <h1 class="header-title"><a href="/index.html"><img class="logo" src="../image/logo-w.png" alt="알랜드"></a></h1>
             
             <ul class="main-menu d-none d-inline-flex-sm">
-                <li><a class="" href="/menu/list">카페메뉴</a></li>
+                <li><a class="" href="/menu/list.html">카페메뉴</a></li>
                 <li><a class="" href="/notice/list.html">공지사항</a></li>
                 <li><a class="" href="/user/login.html">로그인</a></li>
             </ul>
@@ -37,7 +37,7 @@
     <nav class="cafe">
         <div>
             <h1 class="cafe-title">부안에 오면 꼭! 들리는 카페</h1>
-            <div class="mt-auto d-flex justify-content-end"><a class="btn btn-leaf mr-3" href="menu/list">전체메뉴</a></div>
+            <div class="mt-auto d-flex justify-content-end"><a class="btn btn-leaf mr-3" href="menu/list.html">전체메뉴</a></div>
             <nav class="top-menu item-list">
                 <h1 class="d-none">인기메뉴</h1>
                 <ul class="d-inline-block">
