0103 예외 처리 Web Editor 이미지 업로드

--- a/rland/src/main/resources/static/js/utils/editor.html
+++ b/rland/src/main/resources/static/js/utils/editor.html
@@ -18,10 +18,9 @@
             <button class="btn-bold">B</button>
             <button class="btn-italic">I</button>
             <button class="btn-underline">U</button>
+            <button class="">IMG</button>
          </div>
-         <div id="editor" contenteditable="true" class="border h-100px">
-            <div>first line</div>
-         </div>
+         <div id="editor" contenteditable="true" class="border h-100px">asdfasdf</div>
          <textarea name="" id="" cols="80" rows="20" class="d-none"></textarea>
       </div>
       <div>
